Fikset på kontaktskjemaet og ny blogpost

--- a/docs/Bli_med_i_Fintech.mdx
+++ b/docs/Bli_med_i_Fintech.mdx
@@ -19,8 +19,4 @@ Dette kan du gjøre som medlem i Fintech Enigma:
     <li>Komme i kontakt med spennende bedrifter på bedriftspresentasjoner og workshops</li>
 </ul>
 
-
-
-
-
-
+Ønsker du å bidra men ikke føler du har nok forkunnskaper? Ikke tenk på det, vi holder kræsjkurs i utvikling for nye medlemmer hver høst. 
