Fondet består av linjeforeningen Enigma sine oppsparte midler.

--- a/docs/Nordnetportefolje.mdx
+++ b/docs/Nordnetportefolje.mdx
@@ -1,4 +1,5 @@
 # Fintech Enigma Fondet
+Fondet består av linjeforeningen Enigma sine oppsparte midler. 
 
 import { useState, useEffect } from 'react';
 import axios from 'axios';
