Det heter aksjer ikke aksje

--- a/docs/Algoritmeportefolje.mdx
+++ b/docs/Algoritmeportefolje.mdx
@@ -19,7 +19,7 @@ som har best RSI, og gir kjøpssignal dersom verdien er under en utvalgt verdi.
 
 Dette er primært en videreutvikling av RSI-algoritmen. Denne algoritmen henter inn info om RSI, Stochastic, MACD, ADX
 og SMA 20, 50, 100 og 200 fra Yahoo Finance. Videre gir den en poengsum for hver av de tekniske nivåene, summerer
-disse og gir en totalscore. Denne algoritmen er utviklet for å gi en god innsikt i hvilke askje som har best
+disse og gir en totalscore. Denne algoritmen er utviklet for å gi en god innsikt i hvilke aksjer som har best
 tekniske nivåer.
 <ul className={styles.ul}>
   <li>Utvikler Edvard Sander Bae Mysen</li>
