--- a/blog/2023-08-04-Future of fintech med Stacc.mdx
+++ b/blog/2023-08-04-Future of fintech med Stacc.mdx
@@ -18,4 +18,11 @@ export const Bilde = ({children, url, alt}) => {
 
 Bli med oss på Future of Fintech sammen med Stacc den 19. september! Dette blir en lærerik kveld med mulighet for å utvide sitt nettverk. 
 
+
+
+Link til påmeldingssiden: <a href="https://stacc.com/future-of-fintech-bergen" target="_blank" style={{color: "#06ADF4"}}>stacc.com/future-of-fintech-bergen</a>
+
+Link til Facebook-arrangementet finner dere her: <a href="https://fb.me/e/1cazz7q44" target="_blank" style={{color: "#06ADF4"}}>fb.me/e/1cazz7q44</a>
+
+
 <Bilde url="/img/Stacc FoF.jpg" />
