Oppdatert vedtekter ved å fjerne tidl. §5 om GS

--- a/docs/Vedtekter.mdx
+++ b/docs/Vedtekter.mdx
@@ -18,7 +18,7 @@ Fintech Enigma har et hovedstyre som er ansvarlig for daglig drift av gruppen. H
 - Leder – har overordnet ansvar for Fintech Enigma. 
 - Porteføljeansvarlig – ansvarlig for forvaltningsgruppen og økonomistyring i Fintech Enigma. 
 - Utviklingsansvarlig – ansvarlig for utviklergruppen. 
-- Sekretær – ansvarlig for at møter går for seg på en god måte. Sekretæren skriver referat for møter og setter agenda på forhånd. 
+- Koordinator – ansvarlig for at møter går for seg på en god måte. Koordinatoren skriver referat for møter og setter agenda på forhånd. 
 
 ## §3 – Medlemmer 
 Alle studenter ved linjen ITØK på UiB kan bli medlemmer av Fintech Enigma. For å bli medlem kreves det en formell påmelding til HS. Det er ikke kontingent. Medlemmer forplikter seg til å delta aktivt på møter. Medlemmer velger selv om de vil involvere seg i forvaltningsgruppen eller utviklergruppen eller begge.
@@ -36,17 +36,6 @@ Denne vedtekten gjelder midler som kommer fra inntekter direkte til Fintech Enig
 
 ### §4.3 – Utgifter 
 Dersom det skal tas ut penger fra fondet, må porteføljeansvarlig få skriftlig beskjed senest 3 uker i forveien. Dette er for å hindre at fondet realiserer eventuelle unødvendige tap.  
-
-## §5 – Generalforsamling 
-Generalforsamling avholdes en gang hvert år, i høstmånedene. HS skal kalle inn til generalforsamling senest 14 dager i forkant. Kun Fintech Enigmas medlemmer er invitert til å delta på generalforsamlingen. 
-
-### § 5.1 - Generalforsamlingens innhold 
-Under generalforsamlingen skal det først foreligge en orientering om hvordan Fintech Enigma har gjort det i foregående år med tanke på økonomi, arrangementer og bedriftspresentasjoner.  
-
-Det skal føres referat fra generalforsamlingen med underskrifter fra alle nye valgte styremedlemmer som verifiseres med leders signatur.  
-
-### § 5.2 - Ekstraordinær generalforsamling 
-Dersom det anses nødvendig, kan det kalles inn til en ekstraordinær generalforsamling i forskrift med ovenstående paragrafer. 
 
 ## §6 – Avskjediget av styremedlemmer 
 Dersom et styremedlem ikke gjør oppgavene som er rimelig å forvente av stillingen, skal de øvrige medlemmene stemme over hvorvidt det skal sendes en advarsel eller ikke. Flertallets valg avgjør utfallet. 
