lagt til styremedlemmer for 23/24

--- a/blog/2023-03-31-Folg fondet vart.mdx
+++ b/blog/2023-03-31-Folg fondet vart.mdx
@@ -5,7 +5,7 @@ authors: [nathaniel]
 tags: [Nordnet, Fondsforvaltning]
 ---
 
-import ledelsen from '../docs/folk/ledelsen.json';
+import ledelsen from '../docs/folk/ledelsen23_24.json';
 
 Nå kan du endelig følge Fintech Enigma sitt fond direkte her på <a href="/docs/Nordnetportefolje" style={{color: "#06ADF4"}}>fintechenigma.no</a>!
 
