--- a/docs/Om Fintech Enigma.mdx
+++ b/docs/Om Fintech Enigma.mdx
@@ -9,6 +9,7 @@ export const Bilde = ({children, url, alt}) => {
     )
 }
 
+<Bilde url="/img/OneLiner.svg"/>
 
 Fintech Enigma ble opprettet av studenter fra sivilingeniørprogrammet Informasjonsteknologi og økonomi (ITØK) ved UIB høsten 2022. 
 Gruppen har to formål; å forvalte linjeforeningen Enigma sine oppsparte midler og å utvikle tradingalgoritmer. Vi er delt inn i to undergrupper som har ansvar for hvert av disse målene. 
