Satt inn gruppebilder til om, styret, medlemmer og lagt til bilde av sindre

--- a/docs/Medlemmer 23 24.mdx
+++ b/docs/Medlemmer 23 24.mdx
@@ -51,15 +51,22 @@ export const FolkDiv = ({children, folk}) => {
 <hr/>
 <FolkDiv folk={Utvikler} />
 
+<Header>Utviklere</Header>
+<hr/>
+<Bilde url={'/img/Utviklere23_24.jpeg'} alt={'Fintech Enigma Utviklere 2023 / 2024'}/>
+
+
 <br/>
 
 <Header>Forvaltere</Header>
 <hr/>
 <FolkDiv folk={Forvaltere} />
 
+<Header>Forvaltere</Header>
+<hr/>
+<Bilde url={'/img/Forvaltere23_24.jpeg'} alt={'Fintech Enigma Forvaltere 2023 / 2024'}/>
 
 <br/>
-
 
 
 
