--- a/docs/Styret 2023 2024.mdx
+++ b/docs/Styret 2023 2024.mdx
@@ -50,3 +50,7 @@ export const FolkDiv = ({children, folk}) => {
 <Header>Ledelsen 2023 - 2024</Header>
 <hr/>
 <FolkDiv folk={Ledere} />
+
+<Header>Ledelsen 2023 - 2024</Header>
+<hr/>
+<Bilde url={'/img/Styret23_24.jpeg'} alt={'Fintech Enigma Ledelsen 2023 / 2024'}/>
