--- a/docs/Investeringsfilosofi.mdx
+++ b/docs/Investeringsfilosofi.mdx
@@ -9,7 +9,7 @@ investeringer. Vår målsetning er å slå indeksen ved Oslo Børs.
 Fintech Enigmas investeringsstrategi er å finne selskaper som vi mener har en antatt høyere
 fundamental verdi enn den nåværende markedsverdien til selskapet. Altså hvor hele potensialet
 til selskapet ikke reflekteres i aksjekursen. Ved å gå gjennom årsrapporter, regnskap, nøkkeltall
-og nyheter kan man gjøre interne verdsettinger av selskaper. Her er vi ute etter å finne selskaper
+og børsmeldinger/nyheter kan man gjøre interne verdsettinger av selskaper. Her er vi ute etter å finne selskaper
 med god finansiell stabilitet. Vekst i inntjening, god likviditet og relativt lavt gjeldsnivå er
 noen av de viktigste faktorene vi ser etter.
 
@@ -22,18 +22,17 @@ stiller oss knyttet opp imot våre selskapsanalyser.
 
 
 Vi vurderer markedet kontinuerlig i ett makroøkonomisk perspektiv. Dette påvirker vår
-investeringsstrategi med tanke på eksponering mot aksjer kontra fixed income. Det 
+investeringsstrategi med tanke på eksponering av aksjer mot obligasjoner. Det 
 påvirker også hvilke sektorer og bransjer vi går inn i.
 
 
-Selskapene vi kjøper skal holdes på lang sikt, og vi skal ikke la noen menneskelige følelser styre noen 
-handler hos oss. Vi er helt nøytrale ovenfor selskapene, og ser utsiktene til ett selskap dårlig ut/vi 
-har endret mening om selskapet, så selger vi oss ut uansett om vi står i tap. Om hele markedet derimot
-går dårlig, så gjør ikke det at vi selger oss ut av enkeltselskaper. 
+Selskapene vi kjøper skal holdes på lang sikt. Vi er helt nøytrale ovenfor selskapene, og ser utsiktene til ett selskap dårlig ut/vi 
+har endret mening om selskapet, så selger vi oss ut uansett hva avkastningen står i. Om hele markedet derimot
+går dårlig, så betyr ikke det nødvendigvis at vi selger oss ut av enkeltselskaper. 
 
 
-Porteføljen skal være diversifisert med balansert risiko, og vi kommer til å sikte oss inn mot å ha 
-minst 10 selskaper i porteføljen. Vi prøver hovedsakelig å unngå selskaper med høy risiko. Særlig de
+Porteføljen skal være diversifisert med balansert risiko, og vi kommer til å sikte oss inn mot å ha ca
+10 selskaper i porteføljen. Vi prøver hovedsakelig å unngå selskaper med høy risiko. Særlig de
 som avhenger av høy framtidig inntjening og kanskje kun satser på ett enkeltprodukt. Samtidig for å 
-holde porteføljen variert, kan den fra tid til annen inneholde 1-2 selskaper som har en relativt høyere
-beta enn resten. Spesielt hvis det er gode makroøkonomiske utsikter.
+holde porteføljen variert, kan den fra tid til annen inneholde 1-2 selskaper som har høyere risiko enn resten. 
+Spesielt hvis det er gode makroøkonomiske utsikter.
