Portefølje fra db

--- a/docs/Nordnetportefolje.mdx
+++ b/docs/Nordnetportefolje.mdx
@@ -21,8 +21,22 @@ export const NordnetGraf = () => {
             setLabels(res.data.labels);
         });
     }, []);
-    console.log(dataset);
-    console.log(labels);
+    const [ portefoljeData, setPortefoljeData ] = useState([]);
+    const [ fondetsVerdi, setFondetsVerdi ] = useState(1);
+    const months = "Jan,Feb,Mars,Apr,Mai,Jun,Jul,Aug,Sep,Okt,Nov,Des".split(",");
+    useEffect( () => {
+        axios.get('https://fintechenigmaapi.onrender.com/getPortefolje')
+        .then(res => {
+            if(res.data.status === "OK"){
+                setPortefoljeData(res.data.portefoljeData);
+                setFondetsVerdi(res.data.FondetsVerdi)
+            }
+            else{
+                alert(res.data.status);
+            }
+        })
+    }, []);
+    console.log(portefoljeData);
     return (
         <div>
         <div style={{display: "grid", gridTemplateColumns: "repeat(2, 1fr)"}}>
@@ -98,9 +112,42 @@ export const NordnetGraf = () => {
                       }
                 }}
             />
+            <br/>
+            <h1>Porteføljesammensettning</h1>
+            <div className={styles.stock_info_container}>
+                <table className={styles.stock_info_table}>
+                    <thead>
+                        <tr>
+                            <td><strong>Aksje</strong></td>
+                            <td><strong>Kjøpspris</strong></td>
+                            <td><strong>Andel</strong></td>
+                            <td><strong>Antall Aksjer</strong></td>
+                            <td><strong>Dato</strong></td>
+                            <td><strong>Dagens Pris</strong></td>
+                            <td><strong>Utvikling</strong></td>
+                        </tr>
+                    </thead>
+                    {portefoljeData.sort((a,b) => b.andel - a.andel).map(e => {
+                        return(
+                            <tbody>
+                                <tr>
+                                    <td>{e.aksje}</td>
+                                    <td>{e.kostpris}</td>
+                                    <td>{((e.andel / fondetsVerdi)*100).toFixed(1)}%</td>
+                                    <td>{e.antall_aksjer}</td>
+                                    <td>{`${new Date(e.dato).getDate()}. ${months[new Date(e.dato).getMonth()]} ${new Date(e.dato).getFullYear()}`}</td>
+                                    <td>{e.PriceToday}</td>
+                                    <td style={{color: e.PriceToday/e.kostpris >= 1 ? "green" : "red"}}>{((e.PriceToday/e.kostpris - 1)*100).toFixed(1)}%</td>
+                                </tr>
+                            </tbody>
+                        )
+                    })}
+                </table>
+            </div>
         </div>
     )
 }
+// <PortefoljeOversikt portefoljeData={portefoljeData} fondetsVerdi={fondetsVerdi}/>
 
 export const AndelBar = ({children, andel, aksje}) => {
     return(
@@ -119,8 +166,5 @@ export const Portefolje = () => {
     )
 }
 
+
 <NordnetGraf />
-
-## Porteføljesammensettning
-
-<Portefolje />
