--- a/docs/Rapporter.mdx
+++ b/docs/Rapporter.mdx
@@ -16,5 +16,6 @@ export const DownloadButton = ({ filename, url }) => {
 
 
 <div className={styles.rapporter}>
+    <DownloadButton filename={"Halvårsrapport 2024"} url={'/dataset/H1 Rapport Fintech Enigma.pdf'} />
     <DownloadButton filename={"Årsrapport 2023"} url={'/dataset/Årsrapport23.pdf'} />
 </div>
